<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ask And Answer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_account">New Account</string>

    <string-array name="drawer_options">
        <item>Tutorial</item>
        <item>Answer Tests</item>
        <item>Manage Tests</item>
    </string-array>
    <string-array name="drawer_options2">
        <item>Tutorial</item>
        <item>Answer Tests</item>
    </string-array>

    <string name="ckbAnswer">Check It if is a true or correct answer.</string>
    <string name="txtQuestion">Question Text</string>
    <string name="txtAnswer1">Answer 1</string>
    <string name="txtAnswer2">Answer 2</string>
    <string name="txtAnswer3">Answer 3</string>
    <string name="txtAnswer4">Answer 4</string>
    <string name="txtAnswer5">Answer 5</string>
    <string name="lblQuestionNumber"> Questions: </string>
    <string name="lblTestNote"> Max. Note: </string>
    <string name="menuManageSave">Save</string>
    <string name="txtQuestionNote">If is true or correct the answers, just check the box.</string>
    <string name="title_activity_manage">New Question</string>
    <string name="title_activity_management">Manage Tests</string>
    <string name="txtCreateTest">Create New Test</string>
    <string name="title_activity_main">Ask And Accounts</string>
    <string name="title_activity_login">Welcome</string>
    <string name="title_activity_account">New Account</string>
    <string name="txtLogin">Login</string>
    <string name="txtLog">Login</string>
    <string name="txtPass">Password</string>
    <string name="txtPass2">Confirm Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnCreateAccount">Register</string>
    <string name="txtWelcome">"Welcome "</string>
    <string name="txtNewTestTitle">New Test</string>
    <string name="nullText">@null</string>
    <string name="txtNewtestName">Test Name</string>
    <string name="txtNewTestCategory">Test Category</string>
    <string name="txtListTests">Choose on action for the registred Tests below.</string>
    <string name="accountCreated">Account registered sucessifully.</string>
    <string name="userNotFound">Login or password incorrect.</string>
    <string name="exceptionLoginEmpty">Login field is empty.</string>
    <string name="exceptionPassEmpty">Password field is empty.</string>
    <string name="exceptionNoMatchPass">Passwords not match.</string>
    <string name="exceptionMustSelectTest">Must select a Test first.</string>
    <string name="chkCreateMasterUser">Master User</string>
    <string name="testName">"Test: "</string>
    <string name="lblTestCategory">"Category: "</string>
    <string name="btnDeleteTestHint">Delete Test</string>
    <string name="txtNewtestNote">Test Note</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="menuItemLogout">Logout</string>
    <string name="menuAddQuestion">Add Question</string>
    <string name="menuSaveTest">Save Test</string>
    <string name="menuSaveQuestion">Save Question</string>
    <string name="menuDelTest">Delete Test</string>
    <string name="menuItemCancelAccount">Cancel Account</string>
    <string name="lblModelTestNote">Note:</string>
    <string name="lblModelTestNumberQ">"Questions: "</string>
    <string name="exceptionQuestionEmpty">Must type the Question field.</string>
    <string name="exceptionAnswersEmpty">Must type the Question field.</string>
    <string name="exceptionAnswerCorrect">Must select one correct answer at least.</string>
    <string name="exceptionMustSelectQuest">Must select a Question first.</string>
    <string name="title_activity_question_list">Manage Questions</string>
    <string name="btnMngQuestion">Manage Questions</string>
    <string name="btnAddQuestion">Add Question</string>
    <string name="menuEditQuest">Edit Question</string>
    <string name="menuDelQuest">Delete Question</string>
    <string name="menuClose">Close</string>
    <string name="menuAnswerTest">Answer Test</string>
    <string name="selected"> is selected.</string>
    <string name="QuestionSave">New question saved.</string>
    <string name="QuestionAltered">Modified question saved.</string>
    <string name="Question">Question</string>
    <string name="dialogMsgDelTest">Proceed Test erase?</string>
    <string name="dialogMsgDelQuest">Proceed Question erase?</string>
    <string name="dialogTestSelected">Proceed answering this test?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lblTestAuthor">Author:</string>
    <string name="test">Test</string>
    <string name="title_activity_answer_tests_list">AnswerTestsListActivity</string>
    <string name="lblTestList">Choose one of tests below to answer it questions.</string>
    <string name="title_activity_answer_questions_test">AnswerQuestionsTestActivity</string>
    <string name="btnConfirmAnswer">Confirm</string>

</resources>