<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerManageTest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.unibratec.rafaelwms.askandanswer.ManageTestActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textNewTestTite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNewTestTitle" />

    <TextView
        android:id="@+id/txtTestSpace1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nullText" />

    <TextView
        android:id="@+id/txtNewTestName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNewtestName" />

    <EditText
        android:id="@+id/editTestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtNewTestCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNewTestCategory" />

    <EditText
        android:id="@+id/editNewTestCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtTestSpace2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nullText" />

    <TextView
        android:id="@+id/txtNewTestNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNewtestNote"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editNewTestNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtListTests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtListTests" />

    <ListView
        android:id="@+id/litsViewTests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
