<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.unibratec.rafaelwms.askandanswer.ManagementActivity" >

    <item
        android:id="@+id/save_test_action"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="@string/menuSaveTest"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_question_action"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menuAddQuestion"
        app:showAsAction="always"/>
    <item
        android:id="@+id/del_test_action"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/menuDelTest"
        app:showAsAction="always"/>

</menu>